Add ability to open .tar.gz, and add ability to specify memory arguments in wrapper.conf

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -36,4 +36,10 @@ suites:
             license_name: "esb-preprod-2016-1.lic"
             mule_source: "/tmp/mule"
             mule_home: "/usr/local/mule-esb"
-            mule_env: ""
+            mule_env: "development"
+            perm_size: "128m"
+            max_perm_size: "256m"
+            new_size: "256m"
+            max_new_size: "512m"
+            init_heap_size: "512"
+            max_heap_size: "1024"
