--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,8 +12,8 @@ provisioner:
   name: chef_zero
 
 platforms:
-#  - name: ubuntu-14.04
-#  - name: centos-7.2
+  - name: ubuntu-14.04
+  - name: centos-7.2
   - name: centos-6.7
 
 suites:
