include an agent
debugging Jenkins

more debugging

revert for sanity check

OMG why did that one work?

use ruby full path

testing

add in bundle call

Update gems and fix linting

Automate ssh key registration and cleanup

add a pile more DO slugs for other platforms

rename codeship task to cloud

remove codeship badge

update Gemfile to use latest droplet_kit and fix centos 7 asking for password bug

refactor to only remove the created key from ssh-agent

Run tests in Jenkins

Move environment variable definitions into stage

provide filepath to rake command

start ssh-agent when it isn't already

try another eval command for ssh-agent

switch to configfile strategy for ssh connection

deal with when config file doesn't already exist

migrate to inspec from serverspec and configure for junit output

spit out to a different xml per OS provider

include Digital Ocean test outcome for Jenkins to display

set path to ssh_key

move test result target folder to workspace root

move creation of target folder to workspace root

update filepath of where to search for tests

Refactor check for file size and make rubocop more happy

test hard-coded location to look for test outputs

try just grabbing any xml

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -2,11 +2,32 @@
 driver:
   name: digitalocean
 
+verifier:
+  name: inspec
+  format: junit
+  output: ./../target/%{platform}_do_inspec_output.xml
+
 provisioner:
   name: chef_zero
 
+transport:
+  ssh_key_only: true
+  ssh_key: /tmp/key_file
+
 platforms:
   - name: ubuntu-14-04-x64
+    driver_config:
+      size: 2gb
+  - name: ubuntu-16-04-x64
+    driver_config:
+      size: 2gb
+  - name: ubuntu-17-04-x64
+    driver_config:
+      size: 2gb
+  - name: centos-6-x64
+    driver_config:
+      size: 2gb
+  - name: centos-7-x64
     driver_config:
       size: 2gb
 
