migrate to inspec from serverspec and configure for junit output

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -8,6 +8,11 @@ driver:
   synced_folders:
     - [".testcache/", "/tmp/mule"]
 
+verifier:
+  name: inspec
+  format: junit
+  output: ./inspec_output.xml
+
 provisioner:
   name: chef_zero
 
