spit out to a different xml per OS provider

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -11,7 +11,7 @@ driver:
 verifier:
   name: inspec
   format: junit
-  output: ./inspec_output.xml
+  output: ./%{platform}_vagrant_inspec_output.xml
 
 provisioner:
   name: chef_zero
