move test result target folder to workspace root

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -5,7 +5,7 @@ driver:
 verifier:
   name: inspec
   format: junit
-  output: ./target/%{platform}_do_inspec_output.xml
+  output: ./../target/%{platform}_do_inspec_output.xml
 
 provisioner:
   name: chef_zero
